# hiss-me-maybe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
hmm/: __main__.py
